--- a/Staff Planning Case Study.ipynb
+++ b/Staff Planning Case Study.ipynb
@@ -578,58 +578,48 @@
     "**Sets:** \n",
     "\n",
     "The indexes for the given problem are, <br>\n",
-    "- State, $s \\in State$\n",
-    "- Month, $m \\in Month$\n",
+    "- State, $i \\in State$\n",
+    "- Month, $j \\in Month$\n",
     "\n",
     "---\n",
     "\n",
     "**Parameters:** \n",
     "\n",
-    "- $\\text{app_FTE}_{s,m} \\text{ - Applications processed by FTE}$ <br>\n",
+    "- $\\text{x}_{i,j} \\text{ - Applications processed by FTE}$ <br>\n",
     "\n",
     "\n",
-    "- $\\text{app_outsourced}_{s,m} \\text{ - Applications outsourced}$ <br>\n",
+    "- $\\text{y}_{i,j} \\text{ - Applications outsourced}$ <br>\n",
     "\n",
     "\n",
-    "- $\\text{msalary_FTE}_{s,m} \\text{ - Monthly Salary of FTE}$ <br>\n",
+    "- $\\text{FTE_Salary}_{i,j} \\text{ - Monthly Salary of FTE}$ <br>\n",
     "\n",
     "\n",
-    "- $\\text{unitcost_outsourced}_{s,m} \\text{ - Unit Cost for outsourcing 1 application}$ <br>\n",
+    "- $\\text{UnitOutSourceCost}_{i,j} \\text{ - Unit Cost for outsourcing 1 application}$ <br>\n",
     "\n",
     "\n",
-    "- $\\text{staff_avail}_{s,m} \\text{ - Average availability of FTE}$ <br>\n",
+    "- $\\text{StaffAvPer}_{i,j} \\text{ - Average availability of FTE}$ <br>\n",
     "\n",
     "\n",
-    "- $\\text{lb}_{s,m} \\text{ - Minimum availability of FTE}$ <br>\n",
+    "- $\\text{StaffAv_LB}_{i,j} \\text{ - Minimum availability of FTE}$ <br>\n",
     "\n",
     "\n",
-    "- $\\text{ub}_{s,m} \\text{ - Maximum availability of FTE}$ <br>\n",
+    "- $\\text{StaffAv_UB}_{i,j} \\text{ - Maximum availability of FTE}$ <br>\n",
     "\n",
     "\n",
-    "- $\\text{max_app_served} \\text{ - Number of insurance applications that can be processed by an FTE in a month when working with 100 percent availability}$ <br>\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "- $\\text{outsourced_restA} \\text{ - Maximum Number of insurance applications that can be outsourced in a month for State A}$ <br>\n",
-    "\n",
-    "\n",
-    "- $\\text{outsourced_restB} \\text{ - Maximum Number of insurance applications that can be outsourced in a month for State B}$ <br>\n",
-    "                                                                                                             \n",
-    "                                                                                                             \n",
+    "- $\\text{FTE_AppServRate} \\text{ - Number of insurance applications that can be processed by an FTE in a month when working with 100 percent availability}$ <br>\n",
+    "                                                                                                                                                                                                                   \n",
     "---\n",
-    "\n",
     "\n",
     "**Decision variables:**\n",
     "                                                                                                             \n",
     "- Total number of  applications processed by FTE for each state and month combination <br>\n",
     "\n",
-    " $\\text{app_FTE}_{s,m} \\,\\,\\,\\,\\,\\,\\, \\text{where} \\ s \\in State, m \\in Month $<br>\n",
+    " $\\text{x}_{i,j} \\,\\,\\,\\,\\,\\,\\, \\text{where} \\ i \\in State, j \\in Month $<br>\n",
     " \n",
     " \n",
     "- Total number of  applications outsourced for each state and month combination <br>\n",
     "\n",
-    " $\\text{app_outsourced}_{s,m} \\,\\,\\,\\,\\,\\,\\, \\text{where} \\ s \\in State, m \\in Month $<br>\n",
+    " $\\text{y}_{i,j} \\,\\,\\,\\,\\,\\,\\, \\text{where} \\ i \\in State, y \\in Month $<br>\n",
     "\n",
     "\n",
     "---\n",
@@ -641,9 +631,9 @@
     "\n",
     "\n",
     "\\begin{align}\n",
-    "\\textrm{min} (\\sum \\limits _{s,m} \\text{app_FTE}_{s,m}* \\text{msalary_FTE}_{s,m} + \\sum \\limits _{s,m} \\text{app_outsourced}_{s,m}* \\text{unitcost_outsourced}_{s,m})\n",
+    "\\textrm{min} (\\sum \\limits _{i,j} \\text{x}_{i,j}* \\text{FTE_Salary}_{i,j} + \\sum \\limits _{i,j} \\text{y}_{i,j}* \\text{UnitOutSourceCost}_{i,j})\n",
     "\\end{align}\n",
-    "where $s \\in State$ and $m \\in Month$\n",
+    "where $i \\in State$ and $j \\in Month$\n",
     "\n",
     "---\n",
     "\n",
@@ -653,23 +643,23 @@
     "- **Demand Constraint** :- Demand of Insurance for each state and month combination\n",
     "\n",
     "\n",
-    ">- $\\sum \\limits _{s,m} \\text{app_FTE}_{s,m}* \\text{staff_avail}_{s,m}*\\text{max_app_served} == \\text{demand} \\ \\ \\ \\ \\forall  {s \\in State, m \\in Month}$\n",
+    ">- $\\sum \\limits _{i,j} \\text{x}_{i,j}* \\text{StaffAvPer}_{i,j}*\\text{FTE_AppServRate} == \\text{demand} \\ \\ \\ \\ \\forall  {i \\in State, j \\in Month}$\n",
     "\n",
     "\n",
     "- **Staff Availability** :- Staff Availability for best and worst case scenerios.\n",
     "\n",
     "\n",
-    ">- $ \\text{staff_avail}_{s,m}  > \\text{lb}_{s,m} \\ \\ \\ \\ \\forall  {s \\in State, m \\in Month}$\n",
+    ">- $ \\text{StaffAv_LB}_{i,j}  > \\text{lb}_{i,j} \\ \\ \\ \\ \\forall  {i \\in State, j \\in Month}$\n",
     "\n",
-    ">- $ \\text{staff_avail}_{s,m}  < \\text{ub}_{s,m} \\ \\ \\ \\ \\forall  {s \\in State, m \\in Month}$\n",
+    ">- $ \\text{StaffAv_UB}_{i,j}  < \\text{ub}_{i,j} \\ \\ \\ \\ \\forall  {i \\in State, j \\in Month}$\n",
     "\n",
     "\n",
     "\n",
     "- **Outsourcing Regulations** :- Regulatory Regulations on States A & B for outsourcing applications.\n",
     "\n",
-    ">- $ \\text{app_outsourced}_{s,m}  < (\\text{outsourced_restA}_{s,m}*\\text{app_outsourced}_{s,m}) \\,\\,\\,\\,\\,\\,\\, \\text{where} \\ s \\in A , m \\in Month $\n",
+    ">- $ \\text{y}_{i,j}  < (\\text0.3*\\text{demand}_{i,j}) \\,\\,\\,\\,\\,\\,\\, \\text{where} \\ i \\in A , j \\in Month $\n",
     "\n",
-    ">- $ \\text{app_outsourced}_{s,m}  < (\\text{outsourced_restB}_{s,m}*\\text{app_outsourced}_{s,m}) \\,\\,\\,\\,\\,\\,\\, \\text{where} \\ s \\in B , m \\in Month $\n"
+    ">- $ \\text{y}_{i,j}  < (\\text0.4*\\text{demand}_{i,j}) \\,\\,\\,\\,\\,\\,\\, \\text{where} \\ i \\in B , j \\in Month $\n"
    ]
   },
   {
