--- a/Staff Planning Case Study.ipynb
+++ b/Staff Planning Case Study.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
        "4     A   May    1992"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +266,7 @@
        "4     A   May  0.70  0.85        0.78"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +364,7 @@
        "4     A   May         60000         5000.0                180"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +418,7 @@
        "0                   40"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -547,7 +547,7 @@
        "4                180  "
       ]
      },
-     "execution_count": 68,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -573,7 +573,7 @@
        "(36, 9)"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -604,7 +604,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -748,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -807,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -818,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -835,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -848,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -874,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -887,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -920,7 +920,7 @@
       "      Number of bounded subproblems: 0\n",
       "      Number of created subproblems: 0\n",
       "  Error rc: 0\n",
-      "  Time: 2.3907837867736816\n",
+      "  Time: 0.06705069541931152\n",
       "# ----------------------------------------------------------\n",
       "#   Solution Information\n",
       "# ----------------------------------------------------------\n",
@@ -939,7 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1217,7 +1217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1226,7 +1226,7 @@
        "17.96"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1247,7 +1247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1288,7 +1288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1312,7 +1312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 22,
    "metadata": {
     "scrolled": false
    },
@@ -2014,7 +2014,7 @@
        "35                     0.3  "
       ]
      },
-     "execution_count": 82,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2027,7 +2027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2083,7 +2083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2094,7 +2094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2112,7 +2112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2125,7 +2125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2150,7 +2150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2163,7 +2163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -2196,7 +2196,7 @@
       "      Number of bounded subproblems: 0\n",
       "      Number of created subproblems: 0\n",
       "  Error rc: 0\n",
-      "  Time: 0.06328439712524414\n",
+      "  Time: 0.05765247344970703\n",
       "# ----------------------------------------------------------\n",
       "#   Solution Information\n",
       "# ----------------------------------------------------------\n",
@@ -2215,7 +2215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -2493,7 +2493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -2502,7 +2502,7 @@
        "19.6"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2523,7 +2523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -2564,7 +2564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2588,7 +2588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -3288,7 +3288,7 @@
        "35                     0.3  "
       ]
      },
-     "execution_count": 94,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3308,14 +3308,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Optimal Staff Members :  76.7\n"
+      "Optimal number of staff members :  76.7\n"
      ]
     }
    ],
@@ -3324,7 +3324,7 @@
     "\n",
     "Optimal_Staff_Members = round(Output_Worst['No of FTE'].mean(),1)\n",
     "\n",
-    "print(\"Optimal Staff Members : \", Optimal_Staff_Members)"
+    "print(\"Optimal number of staff members : \", Optimal_Staff_Members)"
    ]
   },
   {
@@ -3336,14 +3336,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total Outsourced Application % is :  35.1\n"
+      "Percentage of outsourced applications :  35.1\n"
      ]
     }
    ],
@@ -3356,7 +3356,7 @@
     "\n",
     "Percent_Outsourced_App_Total = round((Total_Outsourcing/Total_Demand)*100,1)\n",
     "\n",
-    "print(\"Total Outsourced Application % is : \", Percent_Outsourced_App_Total)"
+    "print(\"Percentage of outsourced applications : \", Percent_Outsourced_App_Total)"
    ]
   },
   {
@@ -3368,14 +3368,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average Cost per Application:  173.0\n"
+      "Average cost per application:  173.0\n"
      ]
     }
    ],
@@ -3388,12 +3388,12 @@
     "\n",
     "Average_Cost_Per_App = round(Total_Cost/Total_Demand,2)\n",
     "\n",
-    "print(\"Average Cost per Application: \", Average_Cost_Per_App)"
+    "print(\"Average cost per application: \", Average_Cost_Per_App)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3412,7 +3412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3423,7 +3423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3440,7 +3440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3453,7 +3453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3480,7 +3480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3493,7 +3493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -3526,7 +3526,7 @@
       "      Number of bounded subproblems: 0\n",
       "      Number of created subproblems: 0\n",
       "  Error rc: 0\n",
-      "  Time: 0.06978225708007812\n",
+      "  Time: 0.049669504165649414\n",
       "# ----------------------------------------------------------\n",
       "#   Solution Information\n",
       "# ----------------------------------------------------------\n",
@@ -3545,7 +3545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -3823,7 +3823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -3832,7 +3832,7 @@
        "16.53"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3853,7 +3853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -3894,7 +3894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3918,7 +3918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -4618,7 +4618,7 @@
        "35                     0.3  "
       ]
      },
-     "execution_count": 109,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4638,14 +4638,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Optimal Staff Members :  92.9\n"
+      "Optimal number of staff members :  92.9\n"
      ]
     }
    ],
@@ -4654,7 +4654,7 @@
     "\n",
     "Optimal_Staff_Members = round(Output_Best['No of FTE'].mean(),1)\n",
     "\n",
-    "print(\"Optimal Staff Members : \", Optimal_Staff_Members)"
+    "print(\"Optimal number of staff members : \", Optimal_Staff_Members)"
    ]
   },
   {
@@ -4666,14 +4666,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total Outsourced Application % is :  4.1\n"
+      "Percentage of outsourced applications :  4.1\n"
      ]
     }
    ],
@@ -4686,7 +4686,7 @@
     "\n",
     "Percent_Outsourced_App_Total = round((Total_Outsourcing/Total_Demand)*100,1)\n",
     "\n",
-    "print(\"Total Outsourced Application % is : \", Percent_Outsourced_App_Total)"
+    "print(\"Percentage of outsourced applications : \", Percent_Outsourced_App_Total)"
    ]
   },
   {
@@ -4698,14 +4698,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average Cost per Application:  145.88\n"
+      "Average cost per application:  145.88\n"
      ]
     }
    ],
@@ -4718,12 +4718,12 @@
     "\n",
     "Average_Cost_Per_App = round(Total_Cost/Total_Demand,2)\n",
     "\n",
-    "print(\"Average Cost per Application: \", Average_Cost_Per_App)"
+    "print(\"Average cost per application: \", Average_Cost_Per_App)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4755,7 +4755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
